# nrf51-cmake

./: CMakeLists.txt  beacon.mak  build.S  nrf51822.code-workspace
cmake/: arm-none-eabi.cmake  nrf5.cmake  nrf5_helper.cmake  nrf5_paths_12.3.0.cmake  nrf5_sdkvar_12.3.0.cmake
config/: app_config.h  custom_board.h  sdk_config.h
src/: hid.c  hid.h  main.c
